azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.4.993.34462",
      "templateHash": "9954783919761997680"
    }
  },
  "parameters": {
    "vmName": {
      "type": "string"
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_B1ms",
      "allowedValues": [
        "Standard_B1s",
        "Standard_B1ms",
        "Standard_B2s",
        "Standard_B2ms",
        "Standard_F2s"
      ],
      "metadata": {
        "description": ""
      }
    },
    "virtualNetworkName": {
      "type": "string",
      "metadata": {
        "description": "The name for the virtual network."
      }
    },
    "addressSpace": {
      "type": "string",
      "defaultValue": "10.0.0.0/24",
      "metadata": {
        "description": "The IPv4 address space of the virtual network."
      }
    },
    "backupStorageAccountName": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "The storage account name used for the backups. (leave empty for automatic name)"
      }
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "azureuser",
      "metadata": {
        "description": "The admin username for the VM."
      }
    },
    "adminPublicKey": {
      "type": "string",
      "metadata": {
        "description": "The public SSH key used for admin login on the VM."
      }
    },
    "homePublicIP": {
      "type": "string",
      "metadata": {
        "description": "Public IP address of the home network. The NSG will restrict access to this IP."
      }
    },
    "sshNatPort": {
      "type": "int",
      "defaultValue": 22,
      "metadata": {
        "description": "The port number to expose for SSH access to the VM. Will be NAT'd to 22."
      }
    }
  },
  "functions": [],
  "variables": {
    "location": "[resourceGroup().location]",
    "suffix": "[take(uniqueString(resourceGroup().id), 4)]",
    "computerName": "[toUpper(parameters('vmName'))]",
    "cidrParts": "[split(parameters('addressSpace'), '/')]",
    "addressSpaceParts": "[split(variables('cidrParts')[0], '.')]",
    "addressPrefix24": "[format('{0}.{1}.{2}', variables('addressSpaceParts')[0], variables('addressSpaceParts')[1], variables('addressSpaceParts')[2])]",
    "subnetName": "unifi",
    "networkInterfaceName": "[format('{0}-nic', parameters('vmName'))]",
    "availabilitySetName": "[format('{0}-as', parameters('vmName'))]",
    "diagnosticsStorageAccountName": "[format('diag{0}', variables('suffix'))]",
    "backupStgAcc": "[if(empty(parameters('backupStorageAccountName')), format('backup{0}', variables('suffix')), parameters('backupStorageAccountName'))]",
    "pipName": "[format('{0}-pip', parameters('vmName'))]",
    "lbName": "[format('{0}-lb', parameters('vmName'))]",
    "mountFields": [
      "[format('//{0}.file.{1}/backup', variables('backupStgAcc'), environment().suffixes.storage)]",
      "/azure",
      "cifs",
      "vers=3.0,credentials=/root/.smbcreds,dir_mode=0777,file_mode=0777,sec=ntlmssp",
      "0",
      "0"
    ],
    "cloudInitFormat": "#cloud-config\n\ntimezone: Europe/London\n\napt:\n  sources:\n    100-ubnt-unifi:\n      keyid: 06E85760C0A52C50\n      keyserver: keyserver.ubuntu.com\n      source: \"deb https://www.ui.com/downloads/unifi/debian stable ubiquiti\"\n    mongodb-org-3.6:\n      keyid: 58712A2291FA4AD5\n      source: \"deb [arch=amd64] https://repo.mongodb.org/apt/ubuntu bionic/mongodb-org/3.6 multiverse\"\n\npackages:\n- apt-transport-https\n- binutils\n- ca-certificates\n- ca-certificate [...]
    "lbFrontEndRef": {
      "id": "[resourceId('Microsoft.Network/loadBalancers/frontendIPConfigurations', variables('lbName'), 'PublicEndpoint')]"
    },
    "lbBackEndRef": {
      "id": "[resourceId('Microsoft.Network/loadBalancers/backendAddressPools', variables('lbName'), 'unificntr')]"
    },
    "lbProbeRef": {
      "id": "[resourceId('Microsoft.Network/loadBalancers/probes', variables('lbName'), 'inform')]"
    },
    "lbNatRuleRef": {
      "id": "[resourceId('Microsoft.Network/loadBalancers/inboundNatRules', variables('lbName'), 'ssh')]"
    }
  },
  "resources": [
    {
      "type": "Microsoft.Storage/storageAccounts/fileServices/shares",
      "apiVersion": "2021-04-01",
      "name": "[format('{0}/{1}/{2}', variables('backupStgAcc'), 'default', 'backup')]",
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', variables('backupStgAcc'))]",
        "[resourceId('Microsoft.Storage/storageAccounts/fileServices', variables('backupStgAcc'), 'default')]"
      ]
    },
    {
      "type": "Microsoft.Storage/storageAccounts/fileServices",
      "apiVersion": "2021-04-01",
      "name": "[format('{0}/{1}', variables('backupStgAcc'), 'default')]",
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', variables('backupStgAcc'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2021-02-01",
      "name": "Unifi-nsg",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-ssh",
            "properties": {
              "priority": 110,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "[parameters('homePublicIP')]",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRange": "22"
            }
          },
          {
            "name": "Allow-inform-home",
            "properties": {
              "priority": 120,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "[parameters('homePublicIP')]",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRange": "8080"
            }
          },
          {
            "name": "Allow-inform-lb",
            "properties": {
              "priority": 130,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRange": "8080"
            }
          },
          {
            "name": "Allow-ubntui-home",
            "properties": {
              "priority": 140,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "[parameters('homePublicIP')]",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRange": "8443"
            }
          },
          {
            "name": "Allow-ubntui-lb",
            "properties": {
              "priority": 150,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRange": "8443"
            }
          },
          {
            "name": "Allow-http-redirect",
            "properties": {
              "priority": 160,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "[parameters('homePublicIP')]",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRange": "8880"
            }
          },
          {
            "name": "Allow-https-redirect",
            "properties": {
              "priority": 170,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "[parameters('homePublicIP')]",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRange": "8843"
            }
          },
          {
            "name": "Allow-mobile-speedtest",
            "properties": {
              "priority": 180,
              "protocol": "Tcp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "[parameters('homePublicIP')]",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRange": "6789"
            }
          },
          {
            "name": "Allow-stun",
            "properties": {
              "priority": 190,
              "protocol": "Udp",
              "access": "Allow",
              "direction": "Inbound",
              "sourceAddressPrefix": "[parameters('homePublicIP')]",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "VirtualNetwork",
              "destinationPortRange": "3478"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2021-02-01",
      "name": "[parameters('virtualNetworkName')]",
      "location": "[variables('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('addressSpace')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnetName')]",
            "properties": {
              "addressPrefix": "[format('{0}.0/25', variables('addressPrefix24'))]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'Unifi-nsg')]"
              },
              "delegations": []
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', 'Unifi-nsg')]"
      ]
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2021-02-01",
      "name": "[variables('pipName')]",
      "location": "[variables('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static"
      }
    },
    {
      "type": "Microsoft.Network/loadBalancers",
      "apiVersion": "2021-02-01",
      "name": "[variables('lbName')]",
      "location": "[variables('location')]",
      "sku": {
        "name": "Standard",
        "tier": "Regional"
      },
      "properties": {
        "frontendIPConfigurations": [
          {
            "name": "PublicEndpoint",
            "properties": {
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('pipName'))]"
              }
            }
          }
        ],
        "backendAddressPools": [
          {
            "name": "unificntr"
          }
        ],
        "inboundNatRules": [
          {
            "name": "ssh",
            "properties": {
              "frontendIPConfiguration": "[variables('lbFrontEndRef')]",
              "protocol": "Tcp",
              "frontendPort": "[parameters('sshNatPort')]",
              "backendPort": 22,
              "enableFloatingIP": false
            }
          }
        ],
        "loadBalancingRules": [
          {
            "name": "ubntui",
            "properties": {
              "frontendIPConfiguration": "[variables('lbFrontEndRef')]",
              "frontendPort": 8443,
              "backendAddressPool": "[variables('lbBackEndRef')]",
              "backendPort": 8443,
              "protocol": "Tcp",
              "probe": "[variables('lbProbeRef')]",
              "enableFloatingIP": false
            }
          },
          {
            "name": "inform",
            "properties": {
              "frontendIPConfiguration": "[variables('lbFrontEndRef')]",
              "frontendPort": 8080,
              "backendAddressPool": "[variables('lbBackEndRef')]",
              "backendPort": 8080,
              "protocol": "Tcp",
              "probe": "[variables('lbProbeRef')]",
              "enableFloatingIP": false
            }
          }
        ],
        "probes": [
          {
            "name": "inform",
            "properties": {
              "port": 8080,
              "protocol": "Tcp",
              "intervalInSeconds": 15,
              "numberOfProbes": 3
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('pipName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2021-02-01",
      "name": "[variables('networkInterfaceName')]",
      "location": "[variables('location')]",
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', split(format('{0}/{1}', parameters('virtualNetworkName'), variables('subnetName')), '/')[0], split(format('{0}/{1}', parameters('virtualNetworkName'), variables('subnetName')), '/')[1])]"
              },
              "loadBalancerBackendAddressPools": [
                "[variables('lbBackEndRef')]"
              ],
              "loadBalancerInboundNatRules": [
                "[variables('lbNatRuleRef')]"
              ],
              "primary": true,
              "privateIPAllocationMethod": "Dynamic"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/loadBalancers', variables('lbName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]"
      ]
    },
    {
      "type": "Microsoft.Compute/availabilitySets",
      "apiVersion": "2021-04-01",
      "name": "[variables('availabilitySetName')]",
      "location": "[variables('location')]",
      "sku": {
        "name": "Aligned"
      },
      "properties": {
        "platformFaultDomainCount": 2,
        "platformUpdateDomainCount": 5
      }
    },
    {
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2021-04-01",
      "name": "[variables('diagnosticsStorageAccountName')]",
      "location": "[variables('location')]",
      "sku": {
        "name": "Standard_LRS"
      },
      "kind": "StorageV2",
      "properties": {
        "supportsHttpsTrafficOnly": true,
        "accessTier": "Hot",
        "allowBlobPublicAccess": false,
        "encryption": {
          "keySource": "Microsoft.Storage",
          "services": {
            "blob": {
              "enabled": true,
              "keyType": "Account"
            },
            "file": {
              "enabled": true,
              "keyType": "Account"
            }
          }
        }
      }
    },
    {
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2021-04-01",
      "name": "[variables('backupStgAcc')]",
      "location": "[variables('location')]",
      "sku": {
        "name": "Standard_LRS"
      },
      "kind": "StorageV2",
      "properties": {
        "supportsHttpsTrafficOnly": true,
        "accessTier": "Cool",
        "allowBlobPublicAccess": false,
        "encryption": {
          "keySource": "Microsoft.Storage",
          "services": {
            "blob": {
              "enabled": true,
              "keyType": "Account"
            },
            "file": {
              "enabled": true,
              "keyType": "Account"
            }
          }
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-04-01",
      "name": "[parameters('vmName')]",
      "location": "[variables('location')]",
      "properties": {
        "availabilitySet": {
          "id": "[resourceId('Microsoft.Compute/availabilitySets', variables('availabilitySetName'))]"
        },
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "osProfile": {
          "computerName": "[variables('computerName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "provisionVMAgent": true,
            "ssh": {
              "publicKeys": [
                {
                  "keyData": "[parameters('adminPublicKey')]",
                  "path": "[format('/home/{0}/.ssh/authorized_keys', parameters('adminUsername'))]"
                }
              ]
            }
          },
          "customData": "[base64(format(variables('cloudInitFormat'), variables('backupStgAcc'), listKeys(resourceId('Microsoft.Storage/storageAccounts', variables('backupStgAcc')), '2021-04-01').keys[0].value, string(variables('mountFields'))))]"
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]",
              "properties": {
                "primary": true,
                "deleteOption": "Delete"
              }
            }
          ]
        },
        "storageProfile": {
          "osDisk": {
            "name": "[format('{0}-os', toLower(parameters('vmName')))]",
            "caching": "ReadWrite",
            "createOption": "FromImage",
            "diskSizeGB": 32,
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            },
            "deleteOption": "Delete"
          },
          "imageReference": {
            "publisher": "Canonical",
            "offer": "0001-com-ubuntu-server-focal",
            "sku": "20_04-lts-gen2",
            "version": "latest"
          }
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true,
            "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts', variables('diagnosticsStorageAccountName'))).primaryEndpoints.blob]"
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Compute/availabilitySets', variables('availabilitySetName'))]",
        "[resourceId('Microsoft.Storage/storageAccounts', variables('backupStgAcc'))]",
        "[resourceId('Microsoft.Storage/storageAccounts', variables('diagnosticsStorageAccountName'))]",
        "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
      ]
    }
  ]
}
